FIX: animations jump due to image loading.

--- a/src/components/sections/Hero/Hero.module.css
+++ b/src/components/sections/Hero/Hero.module.css
@@ -20,13 +20,6 @@
     gap: 1rem;
 }
 
-.heroImage {
-    width: 100%;
-    height: auto;
-    border: 1px solid var(--black-color);
-    object-fit: cover;
-}
-
 .heroTitle {
     font-size: var(--font-size-xlarge);
     font-weight: 300;
@@ -36,7 +29,9 @@
 }
 
 .heroImage {
+    display: block;
     max-width: 45vw;
+    width: 100%;
     height: auto;
     border: 1px solid var(--black-color);
 }
@@ -46,9 +41,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-weight: 700;
-    font-size: clamp(5rem, 18vw, 30em);
+    font-weight: 900;
+    font-size: clamp(5rem, 18vw, 30rem);
     line-height: 0.9;
+    letter-spacing: -0.5rem;
     color: var(--black-color);
     opacity: 0.06;
     user-select: none;
@@ -60,7 +56,6 @@
     /* align-self: flex-end; */
     z-index: 1000;
 }
-
 
 @media screen and (max-width: 400px) {
     .heroBackground {
